--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "connect-route": "^0.1.5",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.0",
     "react-dom": "^15.3.0",
     "valid-url": "^1.0.9"
   },
